Fix button background color issue on mobile

--- a/src/frontend/css/style.scss
+++ b/src/frontend/css/style.scss
@@ -67,6 +67,7 @@ input, select, button {
 }
 button {
   cursor: pointer;
+  background-color: #fafaf9;
   &:hover {
     background-color: darken(#fafaf9, 10%);
   }
